crates/parser/tests/cases/snapshots/cases__parse_ast__const_def.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(const_def), try_parse_module, \"const FOO: i32 = 1\")"

---
Node(
  kind: Module(
    body: [
      Constant(Node(
        kind: ConstantDecl(
          name: Node(
            kind: "FOO",
            span: Span(
              start: 6,
              end: 9,
            ),
          ),
          typ: Node(
            kind: Base(
              base: "i32",
            ),
            span: Span(
              start: 11,
              end: 14,
            ),
          ),
          value: Node(
            kind: Num("1"),
            span: Span(
              start: 17,
              end: 18,
            ),
          ),
          pub_qual: None,
        ),
        span: Span(
          start: 0,
          end: 18,
        ),
      )),
    ],
  ),
  span: Span(
    start: 0,
    end: 18,
  ),
)
