crates/parser/tests/cases/snapshots/cases__parse_ast__empty_contract_def.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(empty_contract_def), module::parse_module,\n           r#\"contract Foo:\n    pass\n\"#)"

---
Node(
  kind: Module(
    body: [
      Contract(Node(
        kind: Contract(
          name: Node(
            kind: "Foo",
            span: Span(
              start: 9,
              end: 12,
            ),
          ),
          fields: [],
          body: [],
          pub_qual: None,
        ),
        span: Span(
          start: 0,
          end: 12,
        ),
      )),
    ],
  ),
  span: Span(
    start: 0,
    end: 12,
  ),
)
