crates/parser/tests/cases/snapshots/cases__parse_ast__empty_struct_def.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(empty_struct_def), module::parse_module,\n           r#\"struct S:\n  pass\n\"#)"

---
Node(
  kind: Module(
    body: [
      Struct(Node(
        kind: Struct(
          name: Node(
            kind: "S",
            span: Span(
              start: 7,
              end: 8,
            ),
          ),
          fields: [],
          functions: [],
          pub_qual: None,
        ),
        span: Span(
          start: 0,
          end: 8,
        ),
      )),
    ],
  ),
  span: Span(
    start: 0,
    end: 8,
  ),
)
