crates/parser/tests/cases/snapshots/cases__parse_ast__expr_attr1.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(expr_attr1), expressions::parse_expr, \"foo.bar[0][y]\")"

---
Node(
  kind: Subscript(
    value: Node(
      kind: Subscript(
        value: Node(
          kind: Attribute(
            value: Node(
              kind: Name("foo"),
              span: Span(
                start: 0,
                end: 3,
              ),
            ),
            attr: Node(
              kind: "bar",
              span: Span(
                start: 4,
                end: 7,
              ),
            ),
          ),
          span: Span(
            start: 0,
            end: 7,
          ),
        ),
        index: Node(
          kind: Num("0"),
          span: Span(
            start: 8,
            end: 9,
          ),
        ),
      ),
      span: Span(
        start: 0,
        end: 10,
      ),
    ),
    index: Node(
      kind: Name("y"),
      span: Span(
        start: 11,
        end: 12,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 13,
  ),
)
