crates/parser/tests/cases/snapshots/cases__parse_ast__expr_attr2.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(expr_attr2), expressions::parse_expr, \"a[x].b[y](1)\")"

---
Node(
  kind: Call(
    func: Node(
      kind: Subscript(
        value: Node(
          kind: Attribute(
            value: Node(
              kind: Subscript(
                value: Node(
                  kind: Name("a"),
                  span: Span(
                    start: 0,
                    end: 1,
                  ),
                ),
                index: Node(
                  kind: Name("x"),
                  span: Span(
                    start: 2,
                    end: 3,
                  ),
                ),
              ),
              span: Span(
                start: 0,
                end: 4,
              ),
            ),
            attr: Node(
              kind: "b",
              span: Span(
                start: 5,
                end: 6,
              ),
            ),
          ),
          span: Span(
            start: 0,
            end: 6,
          ),
        ),
        index: Node(
          kind: Name("y"),
          span: Span(
            start: 7,
            end: 8,
          ),
        ),
      ),
      span: Span(
        start: 0,
        end: 9,
      ),
    ),
    generic_args: None,
    args: Node(
      kind: [
        Node(
          kind: CallArg(
            label: None,
            value: Node(
              kind: Num("1"),
              span: Span(
                start: 10,
                end: 11,
              ),
            ),
          ),
          span: Span(
            start: 10,
            end: 11,
          ),
        ),
      ],
      span: Span(
        start: 9,
        end: 12,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 12,
  ),
)
