crates/parser/tests/cases/snapshots/cases__parse_ast__expr_repeat.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(expr_repeat), expressions::parse_expr, \"[true; 42]\")"

---
Node(
  kind: Repeat(
    value: Node(
      kind: Bool(true),
      span: Span(
        start: 1,
        end: 5,
      ),
    ),
    len: Node(
      kind: ConstExpr(Node(
        kind: Num("42"),
        span: Span(
          start: 7,
          end: 9,
        ),
      )),
      span: Span(
        start: 7,
        end: 9,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 10,
  ),
)
