crates/parser/tests/cases/snapshots/cases__parse_ast__expr_repeat2.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(expr_repeat2), expressions::parse_expr, \"[5 + 4; 26]\")"

---
Node(
  kind: Repeat(
    value: Node(
      kind: BinOperation(
        left: Node(
          kind: Num("5"),
          span: Span(
            start: 1,
            end: 2,
          ),
        ),
        op: Node(
          kind: Add,
          span: Span(
            start: 3,
            end: 4,
          ),
        ),
        right: Node(
          kind: Num("4"),
          span: Span(
            start: 5,
            end: 6,
          ),
        ),
      ),
      span: Span(
        start: 1,
        end: 6,
      ),
    ),
    len: Node(
      kind: ConstExpr(Node(
        kind: Num("26"),
        span: Span(
          start: 8,
          end: 10,
        ),
      )),
      span: Span(
        start: 8,
        end: 10,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 11,
  ),
)
